--- a/ElementQuiz/ElementQuiz/Base.lproj/Main.storyboard
+++ b/ElementQuiz/ElementQuiz/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_0" orientation="portrait" appearance="light"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,58 +13,100 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ElementQuiz" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Answer Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ex6-tF-9Vq">
-                                <rect key="frame" x="75" y="258" width="240" height="62"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Answer Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ex6-tF-9Vq">
+                                <rect key="frame" x="87" y="264" width="240" height="62"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="62" id="5Ek-h6-tTU"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Type Here" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3pd-JZ-hEr">
-                                <rect key="frame" x="110" y="364" width="169" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Type Here" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3pd-JZ-hEr">
+                                <rect key="frame" x="123" y="362" width="169" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="02b-3R-nHS"/>
                                 </connections>
                             </textField>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="g9y-al-JQM">
-                                <rect key="frame" x="125" y="102" width="140" height="140"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="g9y-al-JQM">
+                                <rect key="frame" x="126" y="116" width="162" height="140"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="140" id="uZn-2E-MNB"/>
+                                </constraints>
                             </imageView>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="7Qy-bb-SIB">
-                                <rect key="frame" x="104" y="44" width="183" height="32"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="7Qy-bb-SIB">
+                                <rect key="frame" x="116" y="61" width="183" height="32"/>
                                 <segments>
                                     <segment title="Flash Cards"/>
                                     <segment title="Quiz"/>
                                 </segments>
                             </segmentedControl>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eqr-Fd-w0t">
-                                <rect key="frame" x="235" y="707" width="116" height="45"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eqr-Fd-w0t">
+                                <rect key="frame" x="278" y="738" width="116" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="116" id="B3F-aN-UdU"/>
+                                    <constraint firstAttribute="height" constant="45" id="gaU-Cb-veZ"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Next"/>
                                 <connections>
                                     <action selector="next:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kqn-NG-399"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aBG-0K-83E">
-                                <rect key="frame" x="48" y="707" width="113" height="45"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aBG-0K-83E">
+                                <rect key="frame" x="20" y="737" width="113" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="113" id="9Pb-8B-syS"/>
+                                    <constraint firstAttribute="height" constant="45" id="a5a-Aa-2IE"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Show Answer"/>
                                 <connections>
                                     <action selector="showAnswer:" destination="BYZ-38-t0r" eventType="touchUpInside" id="b61-6p-Ha1"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Correct Answers:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JJ4-6Y-QM9">
+                                <rect key="frame" x="141" y="577" width="132" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1it-Wo-Gxo">
+                                <rect key="frame" x="202" y="624" width="16" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="3pd-JZ-hEr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="123" id="4TG-yh-JlQ"/>
+                            <constraint firstItem="3pd-JZ-hEr" firstAttribute="top" secondItem="Ex6-tF-9Vq" secondAttribute="bottom" constant="36" id="Cc5-aY-Dbh"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="1it-Wo-Gxo" secondAttribute="bottom" constant="208" id="Fho-FF-JtW"/>
+                            <constraint firstItem="Ex6-tF-9Vq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="FwD-v5-fT9"/>
+                            <constraint firstItem="7Qy-bb-SIB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="116" id="Iko-Te-vhJ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="g9y-al-JQM" secondAttribute="trailing" constant="126" id="Kgo-lt-5vK"/>
+                            <constraint firstItem="1it-Wo-Gxo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="202" id="LVO-pz-HvT"/>
+                            <constraint firstItem="7Qy-bb-SIB" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="17" id="SQe-lq-yIe"/>
+                            <constraint firstItem="Ex6-tF-9Vq" firstAttribute="centerX" secondItem="3pd-JZ-hEr" secondAttribute="centerX" id="Xtv-Bm-6ng"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="eqr-Fd-w0t" secondAttribute="trailing" constant="20" id="e4a-80-xpX"/>
+                            <constraint firstItem="1it-Wo-Gxo" firstAttribute="top" secondItem="JJ4-6Y-QM9" secondAttribute="bottom" constant="26" id="fiI-ji-anM"/>
+                            <constraint firstItem="aBG-0K-83E" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="fno-T4-XPq"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="eqr-Fd-w0t" secondAttribute="bottom" constant="79" id="hpk-lq-YZb"/>
+                            <constraint firstItem="3pd-JZ-hEr" firstAttribute="centerX" secondItem="JJ4-6Y-QM9" secondAttribute="centerX" id="iGC-kj-Api"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7Qy-bb-SIB" secondAttribute="trailing" constant="115" id="lhi-CM-HCr"/>
+                            <constraint firstItem="g9y-al-JQM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="126" id="lwt-o0-hsM"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="aBG-0K-83E" secondAttribute="bottom" constant="80" id="tGv-d5-6Of"/>
+                            <constraint firstItem="g9y-al-JQM" firstAttribute="top" secondItem="7Qy-bb-SIB" secondAttribute="bottom" constant="24" id="tUZ-pi-tan"/>
+                            <constraint firstItem="g9y-al-JQM" firstAttribute="centerX" secondItem="Ex6-tF-9Vq" secondAttribute="centerX" id="zLB-8D-iyN"/>
+                            <constraint firstItem="Ex6-tF-9Vq" firstAttribute="top" secondItem="g9y-al-JQM" secondAttribute="bottom" constant="8" id="zp8-Uw-F2O"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="answerLabel" destination="Ex6-tF-9Vq" id="Czg-LL-r4g"/>
